src/objects/Region__c.object
<CustomObject>
    <description>This object is used to define EEC Region</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City of the region office address</description>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deputy_Commissioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This information is used by the system during the approval process of escalated Investigation. This user is the 1st reviewer / approver.</inlineHelpText>
        <label>Investigation Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EEC_Legacy_Region_ID__c</fullName>
        <description>The External ID value as used in Licensing Manager (or other external feeder systems) for managing UPSERTS into LEAD</description>
        <externalId>true</externalId>
        <inlineHelpText>The External ID value as used in Licensing Manager (or other external feeder systems) for managing UPSERTS into LEAD</inlineHelpText>
        <label>EEC Legacy Region ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of the region office address</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FCC_GSA_1st_Escalation_Case_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denotes the user that will be the 1st Level escalation approver on FCC/GSA cases</description>
        <inlineHelpText>Denotes the user that will be the 1st Level escalation approver on FCC/GSA cases</inlineHelpText>
        <label>FCC/GSA 1st Escalation Case Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FCC_GSA_Case_Escalation_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCC_GSA_2nd_Escalation_Case_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denotes the user that will be the 1st Level escalation approver on FCC/GSA cases</description>
        <inlineHelpText>Denotes the user that will be the 1st Level escalation approver on FCC/GSA cases</inlineHelpText>
        <label>FCC/GSA 2nd Escalation Case Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FCC_GSA_Case_Lvl2_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCC_New_Case_Default_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default user new cases will be assigned to for FCC</inlineHelpText>
        <label>FCC - New Case Default Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax of the region office</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>Region&apos;s number</description>
        <label>Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone number of the region office</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>R_P_1st_Escalation_Case_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denotes the user that will be the 1st Level escalation approver on R&amp;P cases</description>
        <inlineHelpText>Denotes the user that will be the 1st Level escalation approver on R&amp;P cases</inlineHelpText>
        <label>R&amp;P 1st Escalation Case Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R_P_Case_Lvl1_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_P_2nd_Escalation_Case_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denotes the user that will be the 2nd Level escalation approver on R&amp;P cases</description>
        <inlineHelpText>Denotes the user that will be the 2nd Level escalation approver on R&amp;P cases</inlineHelpText>
        <label>R&amp;P 2nd Escalation Case Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R_P_Case_Lvl2_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_P_New_Case_Default_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default user the case will be assigned to for R &amp; P new cases.</inlineHelpText>
        <label>R &amp; P - New Case Default Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This information is used by the system during the approval process of escalated Investigation. For FCC / GSA, this user is the 2nd reviewer / approver.</inlineHelpText>
        <label>Regional Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SGLSA_New_Case_Default_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default user who will be assigned new cases for SGLSA.</inlineHelpText>
        <label>SGLSA - New Case Default Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>&quot;MA&quot;</defaultValue>
        <description>State of the region office address</description>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Number and name of the street of the region office</description>
        <label>Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Licensing Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_In_Calc_2__c</fullName>
        <description>This field is used in a formula to remove &lt;br&gt; from address compound. See solution: https://developer.salesforce.com/forums/?id=906F00000008w7kIAA</description>
        <label>Used_In_Calc</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Zip code of the region office address</description>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>City__c</columns>
        <columns>Phone__c</columns>
        <columns>Fax__c</columns>
        <columns>Regional_Director__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Licensing</fullName>
        <columns>NAME</columns>
        <columns>Number__c</columns>
        <columns>City__c</columns>
        <columns>Phone__c</columns>
        <columns>Fax__c</columns>
        <columns>Regional_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Region__c.Licensing_Region</value>
        </filters>
        <label>All Licensing Regions</label>
    </listViews>
    <listViews>
        <fullName>All_Subsidy</fullName>
        <columns>NAME</columns>
        <columns>Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Region__c.Subsidy_Region</value>
        </filters>
        <label>All Subsidy Regions</label>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <recordTypes>
        <fullName>Licensing_Region</fullName>
        <active>true</active>
        <label>Licensing Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subsidy_Region</fullName>
        <active>true</active>
        <label>Subsidy Region</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>